CMAKE_MINIMUM_REQUIRED (VERSION 3.13)
PROJECT (irex VERSION 0.0.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 11)

FIND_PACKAGE (LLVM 9 REQUIRED CONFIG)

SET (SRCS main.cc)

ADD_EXECUTABLE (main ${SRCS})

# use llvm-dis to disassemble bitcode
FUNCTION (GENERATE_IR tgt)
  TARGET_COMPILE_OPTIONS(${tgt} PRIVATE -flto)
  SET_TARGET_PROPERTIES(${tgt} PROPERTIES
    LINK_FLAGS "-fuse-ld=lld -Wl,--plugin-opt=save-temps")
ENDFUNCTION ()

GENERATE_IR (main)
